Move features/rest-measurements-api over to features/measurements/rest in preperation of breaking out the api and model classes.

--- a/features/pom.xml
+++ b/features/pom.xml
@@ -60,8 +60,8 @@
     <!-- webapps -->
     <module>root-webapp</module>
 
-    <!-- REST -->
-    <module>rest-measurements-api</module>
+    <!-- Measurements API -->
+    <module>measurements</module>
 
     <!-- GWT UI plugins -->
     <module>node-page-list</module>
