--- a/features/measurements/rest/pom.xml
+++ b/features/measurements/rest/pom.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
-    <groupId>org.opennms</groupId>
-    <artifactId>org.opennms.features</artifactId>
+    <groupId>org.opennms.features</groupId>
+    <artifactId>org.opennms.features.measurements</artifactId>
     <version>17.0.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.opennms.features</groupId>
-  <artifactId>org.opennms.features.rest-measurements-api</artifactId>
+  <groupId>org.opennms.features.measurements</groupId>
+  <artifactId>org.opennms.features.measurements.rest</artifactId>
   <packaging>jar</packaging>
-  <name>OpenNMS Features RESTful Measurements API</name>
+  <name>OpenNMS :: Features :: Measurements :: ReST</name>
   <dependencies>
     <!-- Core -->
     <dependency>
