Break the Measurements API out into 3 projects:
* API
* Strategy Implementations
* ReST

--- a/features/measurements/pom.xml
+++ b/features/measurements/pom.xml
@@ -11,6 +11,8 @@
   <packaging>pom</packaging>
   <name>OpenNMS :: Features :: Measurements</name>
   <modules>
+    <module>api</module>
+    <module>strategies</module>
     <module>rest</module>
   </modules>
 </project>
