--- a/features/measurements/rest/pom.xml
+++ b/features/measurements/rest/pom.xml
@@ -25,18 +25,11 @@
       <artifactId>opennms-dao</artifactId>
     </dependency>
 
-    <!-- RRD/JRobin -->
+    <!-- Measurements Strategies -->
     <dependency>
-      <groupId>org.opennms</groupId>
-      <artifactId>opennms-rrd-model</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.opennms</groupId>
-      <artifactId>opennms-rrdtool-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.opennms</groupId>
-      <artifactId>opennms-rrd-jrobin</artifactId>
+      <groupId>org.opennms.features.measurements</groupId>
+      <artifactId>org.opennms.features.measurements.strategies</artifactId>
+      <version>${project.version}</version>
     </dependency>
 
     <!-- Third party -->
@@ -44,14 +37,6 @@
       <groupId>org.opennms.dependencies</groupId>
       <artifactId>jersey-dependencies</artifactId>
       <type>pom</type>
-    </dependency>
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-exec</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
@@ -72,11 +57,6 @@
     <dependency>
       <groupId>org.opennms</groupId>
       <artifactId>opennms-dao-mock</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.opennms.core.test-api</groupId>
-      <artifactId>org.opennms.core.test-api.xml</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
