--- a/features/measurements/strategies/pom.xml
+++ b/features/measurements/strategies/pom.xml
@@ -51,5 +51,9 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-exec</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-jexl</artifactId>
+    </dependency>
   </dependencies>
 </project>
