Move the default value for the org.opennms.rrd.strategyClass property to a constant:
This allows to reference this same default elsewhere in the code-base, instead
of having it statically defined in the application context.

--- a/features/measurements/api/pom.xml
+++ b/features/measurements/api/pom.xml
@@ -22,6 +22,12 @@
       <artifactId>guava</artifactId>
     </dependency>
 
+    <!-- RRD -->
+    <dependency>
+      <groupId>org.opennms</groupId>
+      <artifactId>opennms-rrdtool-api</artifactId>
+    </dependency>
+
     <!-- Testing -->
     <dependency>
       <groupId>org.opennms.core.test-api</groupId>
