Rework the construction of the MeasurementFetchStrategy implementation:
- Avoid creating the class unless it's going to be used
- Use the ServiceLoader paradigm for registering new implementations

--- a/features/measurements/impl/pom.xml
+++ b/features/measurements/impl/pom.xml
@@ -9,7 +9,7 @@
   <groupId>org.opennms.features.measurements</groupId>
   <artifactId>org.opennms.features.measurements.impl</artifactId>
   <packaging>jar</packaging>
-  <name>OpenNMS :: Features :: Measurements :: Implementation</name>
+  <name>OpenNMS :: Features :: Measurements :: Impl.</name>
   <dependencies>
     <!-- Core -->
     <dependency>
